TSVPORTAL-11164: style inline convert to scss

--- a/app/styles/back-office-config.scss
+++ b/app/styles/back-office-config.scss
@@ -1,7 +1,19 @@
-.icon-background2 {
-  color: blue;
+.option-container {
+  margin-top: 10px !important;
 }
 
-.fa-info {
-  color:pink;
+.tooltip-button {
+  font-size: 18px!important;
+  color: #5bc0de!important;
+  padding: 0!important;
+  border: none!important;
+  background: none!important;
+}
+
+.back-office-radio-button {
+  padding-top: 3px!important;
+  max-height: 31px!important;
+  padding-left: 15px!important;
+  margin-top: 5px!important;
+  margin-bottom: 10px!important;
 }
