--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -6,13 +6,13 @@
       <h3 class="modal-title">{{calculateTitle()}}</h3>
     </div>
     <fieldset ng-if="!isFeatureOptionsLoadingInProgress">
-      <div class="form-group col-sm-12" style="margin-top: 10px;" ng-repeat="option in configOptions">
+      <div class="form-group col-sm-12 option-container" ng-repeat="option in configOptions">
         <span class="control-label col-sm-3">{{ option.name }}
-          <button type="button" title="{{toolTipMessage(option)}}" class="fa fa-info-circle tooltip-focus" style="font-size:18px;color: #5bc0de; padding: 0;border: none; background: none;"></button>
+          <button type="button" title="{{toolTipMessage(option)}}" class="fa fa-info-circle tooltip-focus tooltip-button" ></button>
           :
         </span>
         <div class="col-sm-9">
-          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline " style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
+          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline back-office-radio-button" data-initialize="radio" >
             <input ng-disabled="!isCRUD" class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
             <span class="" style="margin-left: 17px;">{{ value.name }}</span>
           </label>
