TSVPORTAL-11164: style inline convert to scss

--- a/app/styles/back-office-config.scss
+++ b/app/styles/back-office-config.scss
@@ -17,3 +17,27 @@
   margin-top: 5px!important;
   margin-bottom: 10px!important;
 }
+
+.back-office-percentage-number {
+  padding-top: 0px!important;
+  max-height: 31px!important;
+  padding-left: 15px!important;
+  margin-top: 5px!important;
+  margin-bottom: 10px!important;
+}
+
+.back-office-number {
+  padding-top: 0px!important;
+  max-height: 31px!important;
+  padding-left: 15px!important;
+  margin-top: 3px!important;
+  margin-bottom: 10px!important;
+}
+
+.back-office-select {
+  padding-top: 0px!important;
+  max-height: 31px!important;
+  padding-left: 15px!important;
+  margin-top: 3px!important;
+  margin-bottom: 10px!important;
+}
