--- a/app/styles/back-office-config.scss
+++ b/app/styles/back-office-config.scss
@@ -1,8 +1,8 @@
-.option-container {
+.back-office-option-container {
   margin-top: 10px !important;
 }
 
-.tooltip-button {
+.back-office-tooltip-button {
   font-size: 18px!important;
   color: #5bc0de!important;
   padding: 0!important;
