--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -134,7 +134,13 @@
       </form>
     </div>
   </div>
-<div class="table-responsive">
+  
+
+    <alert ng-show="!categoryList.length" type="info">
+      <span class="fa fa-flag"></span> Your search returned no results.
+    </alert>
+  
+<div class="table-responsive" ng-show="categoryList.length">
   <table class="table">
     <thead>
     <tr>
@@ -223,15 +229,10 @@
           <span class="fa fa-times"></span>
         </button>
       </td>
-
     </tr>
     </tbody>
   </table>
 </div>
-  <div class="alert alert-info text-center" ng-show="isFiltering && categoryList.length <= 0">
-    <span class="fa fa-exclamation-circle"></span> No Matching Categories Were Found
-  </div>
-
 </div>
 
 <delete-record-dialog></delete-record-dialog>
