TSVPORTAL-11157 | Fixed reload issue after rule apply.

--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -59,7 +59,7 @@
 					<select name="Tax Is" ng-model="search.taxFilter" class="form-control">
 						<option value="true">Included</option>
 						<option value="false">Excluded</option>
-						<option>Exempt</option>
+						<option value="">Exempt</option>
 				    </select>
 				</div>
 			</div>
