TSVPORTAL-11162 - Added select flag in directive view

--- a/app/views/directives/epos-config-form-single-module.html
+++ b/app/views/directives/epos-config-form-single-module.html
@@ -1,11 +1,11 @@
 <li ng-mouseleave="hidePopover(singleModule.id)">
   <span ng-if="singleModule.optionTypeId === 1"> <!-- CheckBox -->
-    <input ng-disabled="areInputsDisabled" type="checkbox" class="maring-right-5px" id="{{singleModule.id}}" ng-model="model.checkbox[singleModule.id]" ng-change="notifyChange(singleModule)" />
+    <input ng-disabled="areInputsDisabled" type="checkbox" class="maring-right-5px" id="{{singleModule.id}}" ng-model="model.checkbox[singleModule.id]" ng-change="notifyChange(singleModule, model.checkbox[singleModule.id])" />
     <label class="epos-config-label">{{singleModule.name}}</label>
   </span>
 
   <span ng-if="singleModule.optionTypeId === 2"> <!-- RadioButton -->
-    <input ng-disabled="areInputsDisabled" type="radio" class="maring-right-5px" id="{{singleModule.id}}" name="{{singleModule.parentId}}" ng-model="model.radioButton[singleModule.parentId]" value="{{singleModule.id}}" ng-change="notifyChange(singleModule)"/>
+    <input ng-disabled="areInputsDisabled" type="radio" class="maring-right-5px" id="{{singleModule.id}}" name="{{singleModule.parentId}}" ng-model="model.radioButton[singleModule.parentId]" value="{{singleModule.id}}" ng-change="notifyChange(singleModule, model.radioButton[singleModule.parentId])"/>
     <label class="epos-config-label">{{singleModule.name}}</label>
   </span>
 
