TSVPORTAL-11164: added style to backoffice select

--- a/app/styles/back-office-config.scss
+++ b/app/styles/back-office-config.scss
@@ -36,7 +36,8 @@
 
 .back-office-select {
   padding-top: 0px!important;
-  max-height: 31px!important;
+  max-height: 35px!important;
+  max-width: 200px!important;
   padding-left: 15px!important;
   margin-top: 3px!important;
   margin-bottom: 10px!important;
