TSVPORTAL-11164: TSVPORTAL-11260: title calculation

--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -1,7 +1,7 @@
 <div class="module-container-epos-configuration">
   <error-dialog form-object="form" error-response="errorResponse" display="displayError">
   </error-dialog>
-  <form class="form-horizontal" name="reportOptions" ng-submit="saveBackOfficeConfig()">
+  <form ng-if="!isFeatureOptionsLoadingInProgress" class="form-horizontal" name="reportOptions" ng-submit="saveBackOfficeConfig()">
     <div class="modal-header">
       <h3 class="modal-title">{{selectedFeature.name}}</h3>
     </div>
