--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -58,8 +58,8 @@
 					<label for="taxIs">Tax Is</label>
 					<select name="Tax Is" ng-model="search.taxFilter" class="form-control">
 						<option value="true">Included</option>
-						<option value="false">Excluded</option>
-						<option value="">Exempt</option>
+						<option value="null">Excluded</option>
+						<option value="false">Exempt</option>
 				    </select>
 				</div>
 			</div>
