TSVPORTAL-6937 - Forbid setting new password same as current one

--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -40,7 +40,7 @@
                      placeholder="Current Password" ng-model="credentials.currentPassword"/>
             </div>
           </div>
-          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPassword.$invalid || passwordMismatch) && submitted }">
+          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPassword.$invalid || errorNewPasswordFields) && submitted }">
             <label for="newPassword" class="col-sm-4 control-label">New Password</label>
 
             <div class="col-sm-8">
@@ -48,7 +48,7 @@
                      ng-model="credentials.newPassword"/>
             </div>
           </div>
-          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPasswordConfirm.$invalid || passwordMismatch) && submitted }">
+          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPasswordConfirm.$invalid || errorNewPasswordFields) && submitted }">
             <label for="newPasswordConfirm" class="col-sm-4 control-label">Confirm New Password</label>
 
             <div class="col-sm-8">
