TSVPORTAL-11149 - Reposition modal

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -50,7 +50,7 @@
   </form>
 </div>
 
-<div id="logout-due-the-session-timeout" class="modal fade">
+<div id="logout-due-the-session-timeout" class="modal fade" style="margin-top: 220px;">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -59,7 +59,7 @@
       </div>
 
       <div class="modal-body">
-        <p>You have been logged out due to inactivity</p>
+        <p>You have been logged out due to inactivity.</p>
       </div>
 
       <div class="modal-footer">
