TSVPORTAL-11149 - Dismiss modal

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" ng-click="logoutDueTheSessionTimeoutModalDismiss()" class="btn btn-info">Ok</button>
+        <button type="button" data-dismiss="modal" class="btn btn-info">Ok</button>
       </div>
     </div>
   </div>
