--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -3,7 +3,7 @@
   </error-dialog>
   <form ng-if="!isFeatureOptionsLoadingInProgress" class="form-horizontal" name="reportOptions" ng-submit="saveBackOfficeConfig()">
     <div class="modal-header">
-      <h3 class="modal-title">{{selectedFeature.name}}</h3>
+      <h3 class="modal-title">{{selectedFeature.title}}</h3>
     </div>
     <fieldset ng-if="!isFeatureOptionsLoadingInProgress">
       <div class="form-group col-sm-12 back-office-option-container" ng-repeat="option in configOptions">
