--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -136,6 +136,7 @@
     </form>
 
     <div class="panel panel-default no-transition" id="search-collapse">
+    <form class="form" ng-submit="searchExciseData()">
       <div class="panel-body">
         <h4>Search Excise Duty Records</h4>
         <hr>
@@ -173,8 +174,9 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-        <button type="button" class="btn btn-primary" ng-click="searchExciseData()">Search</button>
+        <button type="submit" class="btn btn-primary btn-search">Search</button>
       </div>
+    </form>  
     </div>
     <br>
 
