TSVPORTAL-11149 - Remove session timeout query parameter on modal dismiss

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" data-dismiss="modal" class="btn btn-info">Ok</button>
+        <button type="button" data-dismiss="modal" class="btn btn-info" ng-click="dismissSessionTimeoutModal()">Ok</button>
       </div>
     </div>
   </div>
