TSVPORTAL-11254 - Fix header

--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -241,7 +241,7 @@
               <h5 class="text-center"><b>Spend Per Head</b></h5>
               <table class="table table-condensed table-bordered col-xs-12">
                 <tr class="active">
-                  <td>Total Amount {{report.operatingCurrency}}</td>
+                  <td>Total Amount <br /> {{report.operatingCurrency}}</td>
                   <td>Pax</td>
                 </tr>
                 <tr>
