--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -238,22 +238,24 @@
                 </tr>
               </table>
 
-              <h5 class="text-center"><b>Spend Per Head</b></h5>
-              <table class="table table-condensed table-bordered col-xs-12">
-                <tr class="active">
-                  <td>Total Amount <br /> {{report.operatingCurrency}}</td>
-                  <td>Pax</td>
-                </tr>
-                <tr>
-                  <td>{{report.total | number:2}}</td>
-                  <td>{{report.pax ? report.pax : 0 }}</td>
-                </tr>
-                <tr class="active">
-                  <td>Spend Per Head</td>
-                  <td>{{report.spendPerPax ? report.spendPerPax : 0 | number:2}}</td>
-                </tr>
-              </table>
 
+              <div ng-if="report.showSpendPerHead">
+                <h5 class="text-center"><b>Spend Per Head</b></h5>
+                <table class="table table-condensed table-bordered col-xs-12">
+                  <tr class="active">
+                    <td>Total Amount <br /> {{report.operatingCurrency}}</td>
+                    <td>Pax</td>
+                  </tr>
+                  <tr>
+                    <td>{{report.total | number:2}}</td>
+                    <td>{{report.pax ? report.pax : 0 }}</td>
+                  </tr>
+                  <tr class="active">
+                    <td>Spend Per Head</td>
+                    <td>{{report.spendPerPax ? report.spendPerPax : 0 | number:2}}</td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
         </div>
