--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -239,7 +239,7 @@
               </table>
 
 
-              <div ng-if="report.showSpendPerHead">
+              <div ng-if="report.showSpendPerHead === true">
                 <h5 class="text-center"><b>Spend Per Head</b></h5>
                 <table class="table table-condensed table-bordered col-xs-12">
                   <tr class="active">
