TSVPORTAL-11262: error directive updated so now we have option to show custom errors always

--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -36,7 +36,7 @@
   </div>
   <!--/TopHeader -->
   <div class="create-form-container" ng-show="uiSelectTemplateReady">
-    <error-dialog form-object="form" error-response="errorResponse" display="displayError">
+    <error-dialog form-object="form" error-response="errorResponse" display="displayError" show-custom-errors-always="true">
     </error-dialog>
     <form name="form" class="form edit-form create-item-form">
 
