--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -199,10 +199,24 @@
               <div class="form-group">
                 <label>Item Substitutions</label>
                 <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.substitutions" theme="bootstrap">
-                  <ui-select-match placeholder="Item Substitutions" ui-lock-choice="isDisabled()">{{ $item.itemName }}
+                  <ui-select-match placeholder="Start typing to find an item Substitutions" ui-lock-choice="isDisabled()">{{ $item.itemName }}
                   </ui-select-match>
-                  <ui-select-choices repeat="substitution in substitutions | filter: $select.search | orderBy:'itemName'">
+                  <ui-select-choices
+                    refresh="autoCompleteSubstitutionCode($select)"
+                    refresh-delay="300"
+                    repeat="substitution in substitutions | filter: $select.search | orderBy:'itemName'">
                     <div ng-bind-html="substitution.itemName | highlight: $select.search"></div>
+                  </ui-select-choices>
+                </ui-select>
+
+                <ui-select multiple ng-model="search.stationId" theme="bootstrap" >
+                  <ui-select-match placeholder="Start typing to find a Station">{{ $item.code }}
+                  </ui-select-match>
+                  <ui-select-choices
+                    refresh="autoCompleteSubstitutionCode($select)"
+                    refresh-delay="300"
+                    repeat="station in globalStationList | filter: $select.search | orderBy:'code'">
+                    <div ng-bind-html="station.code | highlight: $select.search"></div>
                   </ui-select-choices>
                 </ui-select>
               </div>
