--- a/app/views/commission-data-table.html
+++ b/app/views/commission-data-table.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="panel panel-default collapse no-transition" id="search-collapse">
-      <form name="commissionDataSearchForm">
+      <form name="commissionDataSearchForm" ng-submit="searchCommissionData()">
         <div class="panel-body">
           <div class="row">
 
@@ -53,7 +53,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="button" class="btn btn-primary" ng-click="searchCommissionData()">Search</button>
+          <button type="submit" class="btn btn-primary">Search</button>
         </div>
       </form>
     </div>
