--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -198,7 +198,7 @@
             <fieldset ng-disabled="isDisabled()">
               <div class="form-group">
                 <label>Item Substitutions</label>
-                <ui-select style="min-height: 31px; margin-bottom: 23px;"
+                <ui-select style="min-height: 31px; margin-bottom: 15px;"
                            ng-if="uiSelectTemplateReady"
                            multiple
                            ng-model="formData.substitutions"
@@ -209,24 +209,28 @@
                   <ui-select-match placeholder="Start typing to find an item Substitutions" ui-lock-choice="isDisabled()">{{ $item.itemName }}
                   </ui-select-match>
                   <ui-select-choices
-                    refresh="autoCompleteSubstitutionCode($select)"
-                    refresh-delay="300"
                     repeat="substitution in substitutions | filter: $select.search | orderBy:'itemName'">
                     <div ng-bind-html="substitution.itemName | highlight: $select.search"></div>
                   </ui-select-choices>
                 </ui-select>
 
-                <small ng-hide="areDatesSelected()" class="form-text text-muted">
-                  <span  class="alert alert-info"><i class="fa fa-exclamation-circle"></i> Substitutions will be loaded when Effective date range is selected.</span>
+                <small ng-hide="areDatesSelected()" class="form-text text-muted" >
+                  <span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Substitutions will be loaded when Effective date range is selected.</span>
                 </small>
                 <small ng-if="areDatesSelected() && substitutionsForDateRangeAreEmpty" class="form-text text-muted">
-                  <span  class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> There are no active substitutions for selected date range.</span>
+                  <span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active substitutions for selected date range.</span>
                 </small>
               </div>
 
               <div class="form-group">
                 <label>Item Recommendations</label>
-                <ui-select ng-if="uiSelectTemplateReady" multiple ng-model="formData.recommendations" theme="bootstrap">
+                <ui-select
+                  ng-if="uiSelectTemplateReady"
+                  multiple
+                  ng-model="formData.recommendations"
+                  theme="bootstrap"
+                  style="min-height: 31px; margin-bottom: 15px;"
+                >
                   <ui-select-match placeholder="Start typing to find an item Recommendations" ui-lock-choice="isDisabled()">{{ $item.itemName }}
                   </ui-select-match>
                   <ui-select-choices
@@ -236,10 +240,10 @@
                 </ui-select>
 
                 <small ng-hide="areDatesSelected()" class="form-text text-muted">
-                  <span  class="alert alert-info"><i class="fa fa-exclamation-circle"></i> Recommendations will be loaded when Effective date range is selected.</span>
+                  <span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Recommendations will be loaded when Effective date range is selected.</span>
                 </small>
                 <small ng-if="areDatesSelected() && recommendationsForDateRangeAreEmpty" class="form-text text-muted">
-                  <span  class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> There are no active recommendations for selected date range.</span>
+                  <span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active recommendations for selected date range.</span>
                 </small>
               </div>
 
