TSVPORTAL-11248: loading items on edit

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -199,7 +199,7 @@
               <div class="form-group">
                 <label>Item Substitutions</label>
                 <ui-select style="min-height: 31px; margin-bottom: 15px;"
-                           ng-if="uiSelectTemplateReady"
+                           ng-if="uiSelectTemplateReady && !itemsAreBeingLoaded"
                            multiple
                            ng-model="formData.substitutions"
                            theme="bootstrap"
@@ -225,7 +225,7 @@
               <div class="form-group">
                 <label>Item Recommendations</label>
                 <ui-select
-                  ng-if="uiSelectTemplateReady"
+                  ng-if="uiSelectTemplateReady && !itemsAreBeingLoaded"
                   multiple
                   ng-model="formData.recommendations"
                   theme="bootstrap"
